welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:25: error: illegal start of statement
		match r {
                ^